# libdnf

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .packit.yaml  .pre-commit-config.yaml  .travis.yml  .zuul.yaml  AUTHORS  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING  CPack.libdnf.description.txt  DEVEL  Makefile.am  NEWS  README  README-DESIGN  README.md  RELEASE  VERSION.cmake  autogen.sh  bors.toml  clang-tidy-changed  configure.ac  fix-header-guards  hawkey.spec  libdnf.doap  libdnf.spec  libhif.doap  libhif.spec  main.cpp  run.sh
bindings/: CMakeLists.txt
bindings/go/: CMakeLists.txt
bindings/libdnf/: base.i  common.i  comps.i  repo.i  rpm.i  sack.i  transaction.i  utils.i
bindings/libdnf_cli/: progressbar.i
bindings/perl/: CMakeLists.txt
bindings/perl5/: CMakeLists.txt
bindings/python/: CMakeLists.txt  __init__.py
bindings/python3/: CMakeLists.txt
bindings/ruby/: CMakeLists.txt
bindings/swig/: base.i  common_types.i  conf.i  log.i  module.i  repo.i  rpm_package.i  smartcols.i  swdb.i  transaction.i  utils.i
data/tests/: Makefile.am
dnf-4/po/: CMakeLists.txt  bg.po  bn.po  ca.po  cs.po  da.po  eu.po  fa.po  fr.po  hi.po  id.po  is.po  kn.po  libdnf.pot  ml.po  mr.po  nb.po  nl.po  or.po  pa.po  pl.po  ta.po  te.po  th.po  zanata.xml  zh_CN.po  zh_TW.po
dnf-repoconfig-daemon/: CMakeLists.txt  configuration.cpp  configuration.hpp  logger.cpp  logger.hpp  main.cpp  repoconf.cpp  repoconf.hpp
dnf-repoconfig-daemon/dbus/: CMakeLists.txt  dnf-repoconfig-daemon.service  org.rpm.dnf.v0.conf  org.rpm.dnf.v0.rpm.RepoConf.service  org.rpm.dnf.v1.conf  org.rpm.dnf.v1.rpm.RepoConf.service
dnf-repoconfig-daemon/example_client/: CMakeLists.txt  client.cpp  client.py
dnf-repoconfig-daemon/polkit/: CMakeLists.txt  org.rpm.dnf.v0.policy  org.rpm.dnf.v1.policy
dnfdaemon-client/: CMakeLists.txt  context.cpp  context.hpp  main.cpp
dnfdaemon-client/commands/: command.cpp
dnfdaemon-server/: CMakeLists.txt  package.cpp  session.cpp  session.hpp  threads_manager.hpp  transaction.cpp
docs/api/: Makefile.am  clean.sh  libhif-docs.sgml
docs/hawkey/: CMakeLists.txt  changes.rst  conf.py  rationale.rst  reference-py-repo.rst  reference-py-sack.rst
docs/libdnf/: CMakeLists.txt  Doxyfile.in  index.rst  libdnf-docs.sgml
docs/libhif/: CMakeLists.txt  libhif-docs.sgml  version.xml.in
hawkey/: .gitignore  AUTHORS  CMakeLists.txt  README  README.md  README.rst  VERSION.cmake  hawkey.spec
hawkey/doc/: CMakeLists.txt  changes.rst  conf.py  faq-py.rst  faq.rst  index.rst  rationale.rst  reference-py-errors.rst  reference-py-sack.rst  reference-py.rst  tutorial-py.rst
hawkey/package/: archive  hawkey.spec  hawkey.spec.in
hawkey/src/: CMakeLists.txt  TAGS  advisory.c  advisory.h  advisory_internal.h  advisorypkg.c  advisorypkg.h  advisorypkg_internal.h  advisoryref.c  advisoryref.h  advisoryref_internal.h  errno.c  errno.h  errno_internal.h  frepo.c  frepo.h  goal.c  goal.h  goal_internal.h  hawkey.pc.cmake  hth.c  hy-advisory_internal.h  hy-advisorypkg.c  hy-advisorypkg_internal.h  hy-goal.c  hy-goal.h  hy-nevra.c  hy-package.h  hy-packagelist.c  hy-packagelist.h  hy-packageset.c  hy-packageset.h  hy-query.h  hy-reldep.h  hy-reldep_internal.h  hy-selector.c  hy-selector_internal.h  hy-util.c  hy-util.h  iutil.c  (+38 more)
hawkey/tests/: CMakeLists.txt  Makefile.am  README  fixtures.c  fixtures.h  test_advisory.c  test_advisorypkg.c  test_advisoryref.c  test_goal.c  test_goal.h  test_iutil.c  test_iutil.h  test_main.c  test_package.c  test_package.h  test_packagelist.c  test_packagelist.h  test_packageset.c  test_packageset.h  test_query.c  test_query.h  test_reldep.c  test_reldep.h  test_repo.c  test_repo.h  test_sack.c  test_sack.h  test_selector.c  test_selector.h  test_subject.c  test_suites.h  test_util.c  test_util.h  testshared.c  testshared.h  testsys.c  testsys.h
libdnf/: Base-private.hpp  Base.cpp  Base.hpp  CMakeLists.txt  catch-error.hpp  config-64.h.in  config.h  config.h.in  dnf-activatable.c  dnf-activatable.h  dnf-advisory-private.h  dnf-advisory-private.hpp  dnf-advisory.c  dnf-advisory.cpp  dnf-advisory.h  dnf-advisorypkg-private.h  dnf-advisorypkg-private.hpp  dnf-advisorypkg.c  dnf-advisorypkg.cpp  dnf-advisorypkg.h  dnf-advisoryref-private.h  dnf-advisoryref-private.hpp  dnf-advisoryref.c  dnf-advisoryref.cpp  dnf-advisoryref.h  dnf-cmd.c  dnf-cmd.cpp  dnf-conf.cpp  dnf-conf.h  dnf-context.c  dnf-context.cpp  dnf-context.h  dnf-context.hpp  dnf-db.c  dnf-db.cpp  dnf-db.h  dnf-enums.h  dnf-enums.hpp  dnf-goal.c  dnf-goal.cpp  (+157 more)
libdnf-cli/: CMakeLists.txt  argument_parser.cpp  session.cpp
libdnf-cli/argument_parser_config/: argument_parser_config.cpp  downgrade.cpp  global_arguments.cpp  install.cpp  remove.cpp  repolist.cpp  repoquery.cpp  upgrade.cpp
libdnf-cli/output/: repo_info.cpp  repo_info.hpp  repo_list.cpp  repo_list.hpp  repoinfo.hpp  (+5 more)
libhif/: CMakeLists.txt  Makefile.am  hif-advisory-private.h  hif-advisory.c  hif-advisory.h  hif-advisorypkg-private.h  hif-advisorypkg.c  hif-advisorypkg.h  hif-advisoryref-private.h  hif-advisoryref.c  hif-advisoryref.h  hif-cleanup.h  hif-cmd.c  hif-context-private.h  hif-context.c  hif-context.h  hif-db.c  hif-db.h  hif-enums.h  hif-goal.c  hif-goal.h  hif-hawkey.h  hif-keyring.c  hif-keyring.h  hif-lock.c  hif-lock.h  hif-package.c  hif-package.h  hif-packagedelta-private.h  hif-packagedelta.c  hif-packagedelta.h  hif-reldep-list-private.h  hif-reldep-list.c  hif-reldep-list.h  hif-reldep-private.h  hif-reldep.c  hif-reldep.h  hif-repo.c  hif-repo.h  hif-repos.c  (+80 more)
microdnf/: CMakeLists.txt  context.cpp  context.hpp  library.cpp  main.cpp  plugins.cpp  plugins.hpp  utils.cpp  utils.hpp
po/: CMakeLists.txt  as.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  gu.po  hi.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  libdnf.pot  mai.po  ml.po  mr.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  (+14 more)
tests/: CMakeLists.txt  Makefile.am  giovfs.supp  glib.supp  run_tests.cpp  valgrind-suppressions.txt
(+2003 files in other folders)
