PROJECT (hawkey)
CMAKE_MINIMUM_REQUIRED (VERSION 2.4)
CMAKE_POLICY (SET CMP0005 OLD)

set (CMAKE_C_FLAGS		"${CMAKE_C_FLAGS} -Wall -Wl,--as-needed")
set (CMAKE_C_FLAGS_RELEASE	"${CMAKE_C_FLAGS} -g -O3")
set (CMAKE_C_FLAGS_DEBUG	"${CMAKE_C_FLAGS} -ggdb -O0 -Wall")

INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR})
FIND_PACKAGE (EXPAT REQUIRED)
FIND_PACKAGE (ZLIB REQUIRED)
FIND_LIBRARY (RPMDB_LIBRARY NAMES rpmdb)
FIND_LIBRARY (SOLV_LIBRARY NAMES solv PATHS /home/akozumpl/libsolv/build/src)
FIND_LIBRARY (SOLVEXT_LIBRARY NAMES solvext PATHS /home/akozumpl/libsolv/build/ext)

# rpm:
FIND_LIBRARY (RPMDB_LIBRARY NAMES rpmdb)
IF (NOT RPMDB_LIBRARY)
  FIND_LIBRARY (RPMDB_LIBRARY NAMES rpm)
ENDIF (NOT RPMDB_LIBRARY)
FIND_LIBRARY (RPMIO_LIBRARY NAMES rpmio)
IF (RPMIO_LIBRARY)
  SET(RPMDB_LIBRARY ${RPMIO_LIBRARY} ${RPMDB_LIBRARY})
ENDIF (RPMIO_LIBRARY)

ADD_SUBDIRECTORY (src)
